--- a/Project-4.html
+++ b/Project-4.html
@@ -121,8 +121,13 @@
 									<h4>Outputs</h4>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
+											<p><b>OUTPUT of Home Page:</b></p>
 											<div class="col-12"><span class="image fit"><img src="images\Project-4\Home Page.jpg" alt="" /></span></div>
+											<br>
+											<p><b>OUTPUT of Student List:</b></p>
                                             <div class="col-12"><span class="image fit"><img src="images\Project-4\Student List.jpg" alt="" /></span></div>
+											<br>
+											<p><b>OUTPUT of Faculty List:</b></p>
                                             <div class="col-12"><span class="image fit"><img src="images\Project-4\Faculty List.jpg" alt="" /></span></div>
 										</div>
 									</div>
