--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="" alt="" /></div><div class="content">
+							<div class="image"><img src="images/Project-4/Home Page.jpg" alt="" /></div><div class="content">
 								<h2>Project-4: Smart Student Management System</h2>
 								<p> Currently, we keep records on paper, but our student information system will be created and put into place to replace them, through a secure and better online user interface that has been applied properly and well. 
 								The admin will have direct access to all aspects of a student's academic achievements, student data, notes, and numerous student activities. 
