--- a/Project-4.html
+++ b/Project-4.html
@@ -54,25 +54,26 @@
 							<p><em>Currently, we keep records on paper, but our student information system will be created and put into place to replace them, through a secure and better online user interface that has been applied properly and well. 
 							The admin will have direct access to all aspects of a student's academic achievements, student data, notes, and numerous student activities. 
 							The college administrator manages the cloud servers where all the data is stored, ensuring the highest level of security.
-                            </em></p>
+                            				</em></p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/uFsCrUkC0Tg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 								<section>
 									<h4>Introduction</h4>
 									<p><em>First, With the help of front-end tools like HTML and CSS, we created a login page for our project. 
 									Then we used Python to develop back-end structure along with the Django framework. SQLite database will store the students and faculty information. 
 									Finally, the admin will login and he has the complete access to add or remove the data.
-                                    </em></p>
+                                    					</em></p>
 									<hr />
 									<header>
 										<h4>Additional Information</h4>
                                         <p>In our project, we have added the students and faculty information using SQLite. 
-										The admin is the responsible person to display the complete student data like academics, marks, grades, attendance, etc.
-										In the sub system, we added some of the key modules like academics, attendance, etc.
+					The admin is the responsible person to display the complete student data like academics, marks, grades, attendance, etc.
+					In the sub system, we added some of the key modules like academics, attendance, etc.
                                         </p>
-                                        <p><b>Module: STUDENT MANAGEMENT SYSTEM:-</b><br></p>
+                                        
+					<p><b>Module: STUDENT MANAGEMENT SYSTEM:-</b><br></p>
                                         <p><b>(A) ACADEMICS :</b>
                                         Here, In this section, we added the academics as terms 1,2,3,4 etc.
                                         </p><br>
@@ -85,16 +86,14 @@
                                         <p> In these sections, the student obtained marks and grades will be calculated and shown by the administrator.  
                                         </p>
 
-										<b>(D) PAYMENTS :</b><br> 
-										<p> 
-											Parents are able to get the access to pay the particular student's academic fees. Later, the administrator will be able to show the bills.
-										</p>
-										<p>
-											Hence, we are here to conclude our project. This project was designed for the sake of storing useful information about the student and faculty in the form of a database, and then linking it with the help of backend tools like Django and Javascript technologies.
-										Finally, the combination of frontend and backend along with the server-side management helps us to fulfill the dreams of this project and thus we made this project a full-stack Student Management System.
-										</p>
+					<b>(D) PAYMENTS :</b><br> 
+					<p> Parents are able to get the access to pay the particular student's academic fees. Later, the administrator will be able to show the bills.
+					</p>
+					<p> Hence, we are here to conclude our project. This project was designed for the sake of storing useful information about the student and faculty in the form of a database, and then linking it with the help of backend tools like Django and Javascript technologies.
+					Finally, the combination of frontend and backend along with the server-side management helps us to fulfill the dreams of this project and thus we made this project a full-stack Student Management System.
+					</p>
 									</header>
-                                </section>
+                                				</section>
 
 								<section>
 									<h4>Technologies and Tools used:</h4>
@@ -136,10 +135,11 @@
                                 <section>
 									<h4>Project Source link:</h4>
 									<ul class="actions">
-										<li><a href="https://github.com/Pavan281/EPICS_ACSU" class="button primary">GitHub Link</a></li>
+										<li><a href="https://github.com/Pavan281/Django_SMS-Capstone" class="button primary">GitHub Link</a></li>
 									</ul>
                                     <ul class="actions">
                                         <li><a href="index.html" class="button">Back to My PORTFOLIO</a></li>
+					<li><a href="https://www.researchgate.net/publication/372767286_Student_Management_System_Capstone_Project" class="button">Click to view with the Research Gate</a></li>    
                                     </ul>
                                 </section>
 							</div>
