--- a/Project-4.html
+++ b/Project-4.html
@@ -32,7 +32,7 @@
 												<li><a href="https://twitter.com/PavanPandipati" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://www.facebook.com/pavan.pandipati.7" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="https://www.instagram.com/pavan_sarlajagadeesh/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                                                <li><a href="https://www.linkedin.com/in/pavan-pandipati/" class="icon brands fa-linkedin"><span class="label">Linked In</span></a></li>
+                                                						<li><a href="https://www.linkedin.com/in/pavan-pandipati/" class="icon brands fa-linkedin"><span class="label">Linked In</span></a></li>
 												<li><a href="https://www.snapchat.com/add/pavanpandipati?share_id=aQSeZWjaBRc&locale=en-IN" class="icon brands fa-snapchat"><span class="label">Snapchat</span></a></li>
 												<li><a href="https://dribbble.com/Pandipati_Pavan" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 												<li><a href="mailto:pavanpandipati0@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -56,8 +56,10 @@
 							The college administrator manages the cloud servers where all the data is stored, ensuring the highest level of security.
                             				</em></p>
 						</header>
+						
 						<section class="wrapper style5">
 							<div class="inner">
+								<p>Youtube Video:</p>
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/uFsCrUkC0Tg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 								<section>
 									<h4>Introduction</h4>
@@ -136,10 +138,10 @@
 									<h4>Project Source link:</h4>
 									<ul class="actions">
 										<li><a href="https://github.com/Pavan281/Django_SMS-Capstone" class="button primary">GitHub Link</a></li>
+										<li><a href="https://www.researchgate.net/publication/372767286_Student_Management_System_Capstone_Project" class="button">Open with Research Gate</a></li>    
 									</ul>
                                     <ul class="actions">
-                                        <li><a href="index.html" class="button">Back to My PORTFOLIO</a></li>
-					<li><a href="https://www.researchgate.net/publication/372767286_Student_Management_System_Capstone_Project" class="button">Click to view with the Research Gate</a></li>    
+                                        <li><a href="index.html" class="button">Back to My PORTFOLIO</a></li>    
                                     </ul>
                                 </section>
 							</div>
