--- a/Project-2.html
+++ b/Project-2.html
@@ -57,6 +57,7 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<p>Youtube Video:</p>
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/TX85z9PriaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 								<section>
@@ -109,6 +110,7 @@
 									<h4>Project Source link:</h4>
 									<ul class="actions">
 										<li><a href="https://github.com/Pavan281/Face-Detection" class="button primary">GitHub Link</a></li>
+										<li><a href="https://www.researchgate.net/publication/372743093_FACE_DETECTION_EMOJI_PICKER" class="button">Open with Research Gate</a></li>    
 									</ul>
                                     <ul class="actions">
                                         <li><a href="index.html" class="button">Back to My PORTFOLIO</a></li>
