--- a/Project-1.html
+++ b/Project-1.html
@@ -54,6 +54,7 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<p>Youtube Video:</p>
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/vwU75MG0TaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 								<section>
@@ -104,6 +105,7 @@
 									<h4>Project Source link:</h4>
 									<ul class="actions">
 										<li><a href="https://github.com/Pavan281/Chatbot-using-Python" class="button primary">GitHub Link</a></li>
+										<li><a href="https://www.researchgate.net/publication/372767377_CHATBOT_USING_PYTHON_FOR_CORONA_VIRUS" class="button">Open with Research Gate</a></li>
 									</ul>
                                     <ul class="actions">
                                         <li><a href="index.html" class="button">Back to My PORTFOLIO</a></li>
